# rsync_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general.yaml
analysis/: linux_all_measurements.csv  linux_chunk_size_to_compression_ratio.csv  linux_source_code_analysis.ipynb
benches/: file1  runtime_benchmark.rs
benches/test_files/: file1.signature  recreated_file
src/: delta.rs  io_utils.rs  lib.rs  main.rs  patch.rs  signature.rs  test_utils.rs
src/domain/: delta.rs  mod.rs  patch.rs  signature.rs
tests/: compression_tester.rs  integration_tester.rs  tester_script.rs
tests/completely_different_files/: file1  file1.signature
tests/equal_files/: file1.signature  file2.delta
tests/integration_tests/test_files/completely_different_files/: file1.signature  file2.delta  recreated_file
tests/integration_tests/test_files/equal_files/: file1.signature  file2.delta
tests/integration_tests/test_files/random/big/TKzhT/: file1  file1.signature  file2.delta
tests/integration_tests/test_files/random/big/ej-dw/: file1.signature  file2.delta
tests/random/big/TKzhT/: file2  file2.delta  recreated_file
tests/random/big/ej-dw/: file1  file2.delta  recreated_file
tests/random/small/2wyhg/: file1  file1.signature  file2
tests/random/small/3B87v/: file2.delta
tests/test_files/completely_different_files/: file2.delta
tests/test_files/equal_files/: file2.delta
tests/test_files/random/big/TKzhT/: file1.signature  file2.delta
tests/test_files/random/big/ej-dw/: file1.signature
tests/test_files/random/small/2wyhg/: file2.delta
tests/test_files/random/small/3B87v/: file1.signature
(+6 files in other folders)
