[package]
name = "rsync_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.10.5"
rolling_hash_rust = { git = "https://github.com/mdacach/rolling_hash_rust", branch = "main" }
