[package]
name = "rsync_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
criterion = "0.4.0"
csv = "1.1.6"
itertools = "0.10.5"
nanoid = "0.4.0"
rand = "0.8.5"
rmp-serde = "1.1.1"
rolling_hash_rust = { git = "https://github.com/mdacach/rolling_hash_rust" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[[bench]]
name = "runtime_benchmark"
harness = false
