[package]
name = "rsync_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
criterion = "0.7.0"
csv = "1.3.1"
itertools = "0.14.0"
nanoid = "0.4.0"
rand = "0.9.2"
rmp-serde = "1.3.0"
rolling_hash_rust = { git = "https://github.com/mdacach/rolling_hash_rust" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[[bench]]
name = "runtime_benchmark"
harness = false
